tests/ui/does-not-have-iter-interpolated-dup.stderr
error[E0277]: the trait bound `ThereIsNoIteratorInRepetition: CheckHasIterator` is not satisfied
 --> tests/ui/does-not-have-iter-interpolated-dup.rs:8:5
  |
8 |     quote!(#(#nonrep #nonrep)*);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `CheckHasIterator` is not implemented for `ThereIsNoIteratorInRepetition`
  |
  = help: the trait `CheckHasIterator` is implemented for `HasIterator`
  = note: this error originates in the macro `$crate::quote_token_with_context` which comes from the expansion of the macro `quote` (in Nightly builds, run with -Z macro-backtrace for more info)
